--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2024"
 tokio = { version = "1", features = ["full"] }
 simplelog = "0.12.2"
 log = "0.4"
-iced = { version = "0.14.0", features = ["tokio"] }
+iced = { version = "0.14.0", features = ["tokio", "sipper"] }
