--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ tokio = { version = "1", features = ["full"] }
 simplelog = "0.12.2"
 log = "0.4"
 iced = { version = "0.14.0", features = ["tokio", "sipper"] }
+clap = { version = "4.5.53", features = ["derive"] }
