--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ simplelog = "0.12.2"
 log = "0.4"
 iced = { version = "0.14.0", features = ["tokio", "sipper"] }
 clap = { version = "4.5.53", features = ["derive"] }
+serde = "1.0"
+serde_json = "1.0"
