--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ rust-version = "1.88.0"
 tokio = { version = "1", features = ["full"] }
 simplelog = "0.12.2"
 log = "0.4"
-iced = { version = "0.14.0", features = ["tokio", "sipper"] }
+iced = { version = "0.14.0", features = ["tokio", "sipper", "advanced"] }
 clap = { version = "4.5.53", features = ["derive"] }
 serde = "1.0"
 serde_json = "1.0"
